grammar.js
        source_file: $ => repeat($._markup),

        // nbsp | shy | endash | emdash |
        // ellipsis | quote | strong | emph | raw | link | math | heading |
        // list | enum | desc | label | ref | markup-expr | comment
        _markup: $ => prec.left(choice(
            $._text,
            $._whitespace,
            $._paragraph_break,
            $._code_mode,
            $.quote,
            $.line_break,
            $.escape_sequence,
            $.label,
            $.reference,
            $.emphasis,
            $.strong,
            $.link
        )),

        identifier: $ => prec(2, /[_\p{XID_Start}][_\p{XID_Continue}]*/),

        // this language uses whitespace to SOMETIMES separate tokens
        // thus, we need to be explicit about whitespace use
        // this makes parsing so much harder to do
        _whitespace: $ => /\p{White_Space}+/,

        // --- Comments
        line_comment: $ => token(seq(
            '//', /[^\r\n]*/
        )),

        link: $ => seq(
            'http',
            optional('s'),
            '://',
            optional(prec.left(repeat1(/\S/)))),

        code_block: $ => seq(
            '{',
            optional(repeat1(
                choice(
                    $._whitespace,
                    seq(
                        optional($._whitespace),
                        choice($.expression, $.identifier),
                        optional(';'),
                        optional('\n'),
                        optional($._whitespace),
                    ),
                )
            )),
            '}'
        ),

        content_block: $ => seq(
            '[',
            optional(repeat1($._markup)),
            ']',
        ),

        // group-expr ::= '(' expr ')'
        // renamed to parenthesized_expression because I thought it sounded better.
        let_declaration: $ => prec.left(1, seq(
            'let',
            $._whitespace,
            field('name', $.identifier),
            choice(seq(
                optional(field('parameters', $.parameters)),
                optional($._whitespace),
                '=',
                optional($._whitespace),
                field('rhs', choice($.expression, $.identifier)),
                optional($._whitespace),
            ),
                ';'
            )
        )),

        // set-expr ::= 'set' expr ('if' expr)?
        set_expression: $ => prec.left(PREC.assignment, seq(
            'set',
            $._whitespace,
            field('name', $.expression),
            optional(choice($.if_cause, $._whitespace))
        )),

        method_call: $ => prec(2, seq(
            field('value', choice($.expression, $.identifier)),
            '.',
            field('method', $.identifier),
            field('arguments', $.arguments),
        )),

        // func-call ::= expr args
        function_call: $ => prec.left(1, seq(
            field('name', $.identifier),
            field('arguments', $.arguments),
        )),

        // args ::= ('(' (arg (',' arg)* ','?)? ')' content-block*) | content-block+
        arguments: $ => prec.left(choice(
            repeat1($.content_block),
            seq(
                '(',
                optional(commaSep($._whitespace, $._argument, $.line_comment)),
                ')',
                repeat($.content_block)
            ),
        )),

        // arg ::= (ident ':')? expr
        _argument: $ => choice(
            alias($.expression, $.argument),
            $.asssigned_argument
        ),

        asssigned_argument: $ => seq(
            field('name', $.identifier),
            optional($._whitespace),
            ':',
            optional($._whitespace),
            field('value', $.expression),
            optional($._whitespace),
        ),

        boolean_literal: $ => choice('true', 'false'),

        // int ::= digit+
        // digit = '0' | ... | '9'
        int_literal: $ => /\d+/,

        // float ::= ((digit+ ('.' digit*)?) | ('.' digit+)) ('e' digit+)?
        // A floating-point number: `1.2`, `10e-4`.
        unit: $ => choice('pt', 'mm', 'cm', 'in', 'deg', 'rad', 'em', 'fr', '%'),

        // numeric ::= float unit
        numeric: $ => prec(1, seq(
            field('value', choice($.float_literal, $.int_literal)),
            field('unit', $.unit)
        )),

        // str ::= '"' .* '"'
        string_literal: $ => seq(
            '"',
            repeat(choice(
                $.escape_sequence,
                $._not_an_escape_sequence,
                $._string_content
            )),
            '"'
        ),

        _not_an_escape_sequence: $ => token.immediate(
            '\\'
        ),
